--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "clsx": "^1.1.1",
+    "emailjs-com": "^3.2.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-toastify": "^8.0.2",
     "sass": "^1.37.5"
   },
   "devDependencies": {
